[package]
name = "mamba-minimal-dfdx-example"
version = "0.1.0"
edition = "2021"

# dfdx version containing necessary PRs
[dependencies.dfdx]
git = 'https://github.com/swfsql/dfdx.git'
rev = "1207867ed209360c2e4084d0809a218a0dfe3e0b"
# path = "../dfdx/dfdx"
default-features = false
features = [
    "std",
    # "cpu",
    "safetensors",
    # "nightly",
    # "fast-alloc",
    # "cuda",
    # "cudnn",
]

[dependencies]
# helps to deal with errors
anyhow = "1.0.0"
# other dependencies
hf-hub = "0.3.2"
memmap2 = "0.9.4"
tokenizers = "0.13.4"
safetensors = "0.4.2"
candle-examples = "0.3.2"
candle-transformers = "0.3.2"
candle-core = "0.3.2"
