[package]
name = "mamba-minimal-dfdx-example"
version = "0.1.0"
edition = "2021"

[features]
default = []
# default = ["native"]
native = []

[lib]
crate-type = ["cdylib", "rlib"]


[[bin]]
name = "mamba_minimal_dfdx_example"
path = "src/native/main.rs"
required-features = ["native"]

[patch.crates-io]
# dfdx = { path = "../dfdx/dfdx" }
# hf-hub = { path = "../hf-hub" }

# [patch.crates-io.reqwest]
# version = "0.11.23"
# git = "https://github.com/ostenbom/reqwest.git"
# rev = "a055a9025d579e30225ba4f50c435cebfbf4aacc"

# dfdx version containing necessary PRs
[dependencies.dfdx]
# path = "../dfdx/dfdx"
git = 'https://github.com/swfsql/dfdx.git'
rev = "bff1b658aa3b91b0af57f037c7cc704d216d1f03"
default-features = false
features = [
    "safetensors",
    "nightly",
    # "std",
    # "cpu",
    # "fast-alloc",
    # "cuda",
    # "cudnn",
]

[dependencies]
# helps to deal with errors
anyhow = "1.0.0"
# other dependencies
# hf-hub = "0.3.2"
#
# candle-examples = "0.3.2"
candle-transformers = "0.3.2"
candle-core = "0.3.2"
tokenizers = { version = "0.13.4", default-features = false, features = [
    "unstable_wasm",
] }

# [dependencies.hf-hub]
# version = "0.3.2"
# default-features = false


# Note: requires esaxx-rs which requires clang

# non-wasm target

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.hf-hub]
version = "0.3.2"
# path = "../hf-hub"
git = "https://github.com/swfsql/hf-hub.git"
rev = "477e0fa0bb398dd96b9106c491e1e3aee32cf6ba"
default-features = false
features = ["online"]

# wasm target

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
reqwest = { version = "0.11.23", features = ["json"] }
wasm-bindgen = { version = "0.2.91", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.24"
log = "0.4.6"
# wasm-logger = "0.2.0"
console_log = { version = "1.0.0", features = ["color"] }
indexed_db_futures = "0.4.1"
web-time = "1.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies.hf-hub]
# TODO: upload hf-hub fork
version = "0.3.2"
# path = "../hf-hub"
git = "https://github.com/swfsql/hf-hub.git"
rev = "477e0fa0bb398dd96b9106c491e1e3aee32cf6ba"
default-features = false
features = ["wasm"]

# [target.'cfg(target_arch = "wasm32")'.dependencies.tokenizers]
# version = "0.13.4"
# features = ["unstable_wasm"]

#
