[package]
name = "mamba-minimal-dfdx-example"
version = "0.1.0"
edition = "2021"

[features]
default = []
# default = ["wasm_yew_ui"]
# default = ["native"]
native = []
wasm_yew_ui = []

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "mamba_minimal_dfdx_example"
path = "src/native/main.rs"
required-features = ["native"]

# dfdx version containing necessary PRs
[dependencies.dfdx]
git = 'https://github.com/swfsql/dfdx.git'
branch = "this-main"
# rev = "c4a2995"
default-features = false
features = ["nightly", "safetensors"]

[dependencies.dfdx-mamba]
git = 'https://github.com/swfsql/dfdx-mamba.git'
branch = "main"
# path = "../dfdx-mamba"
# rev = "3b7549845baff53c8fab51068a04d87e21ba0470"
features = ["nightly", "safetensors"]


[dependencies]
anyhow = "1.0.0"
candle-transformers = "0.3.2"
candle-core = "0.3.2"
tokenizers = { version = "0.13.4", default-features = false, features = [
    "unstable_wasm",
] }

# non-wasm target

[target.'cfg(not(target_arch = "wasm32"))'.dependencies.hf-hub]
version = "0.3.2"
# path = "../hf-hub"
git = "https://github.com/swfsql/hf-hub.git"
rev = "a411dde1a7ab30d782cb978955b922551fb7eeb1"
default-features = false
features = ["online"]

# wasm target

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
reqwest = { version = "0.11.23", features = ["json"] }
wasm-bindgen = { version = "0.2.91", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.24"
log = "0.4.6"
console_log = { version = "1.0.0", features = ["color"] }
indexed_db_futures = "0.4.1"
web-time = "1.0.0"
humansize = "2.1.3"
gloo-timers = { version = "0.3.0", features = ["futures"] }
yew = { version = "0.21.0", features = ["csr"] }

[target.'cfg(target_arch = "wasm32")'.dependencies.hf-hub]
version = "0.3.2"
# path = "../hf-hub"
git = "https://github.com/swfsql/hf-hub.git"
rev = "a411dde1a7ab30d782cb978955b922551fb7eeb1"
default-features = false
features = ["wasm"]
